vbnc/vbnc/tests/Errors/30451-1.vb
Class test1
    Shared Sub Main()
        Dim c As system.collections.arraylist
        For Each i As Integer In c

        Next j
    End Sub
End Class
